# router_analysis

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.sh
router_analysis/: __init__.py  __main__.py  cli.py  config.py  context.py
router_analysis/cache/: result_cache.py
router_analysis/engine/: engine.py
router_analysis/output/: logger.py  report.py
router_analysis/scanners/: __init__.py  base.py  binwalk.py  cve.py  cve_rules.py  magika.py
router_analysis/scanners/disassembly/: __init__.py  angr.py  ghidra.py  patterns.py  radare2.py
